@@ -4,6 +4,9 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2020-10-05
+ * In wing.vue.js added set_fetch_api() on wing.object.
+
 2020-10-01
  * Made the algolia search code a bit more elegant to make it easier to implement their recommended retry strategy.
  * Wing::Algolia has been updated to cycle through 4 different URLs for redundancy.
